fixed statistics overflow

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -158,9 +158,6 @@ and auto generate a challenge */
 
 /* a generic statistics class for the global and personal statistics */
 .statistics{
-  /* width: 95%;
-  height: 45%;
-  background: teal; */
   margin-top: 10px;
   display: flex;
   border-color:#d7dce3 !important;
@@ -170,6 +167,15 @@ and auto generate a challenge */
   background-color: white;
 }
 
+#friendsstatisticsbox{
+  width: 350px;
+  margin-top: 0;
+}
+
+#groupsstatisticsbox{
+  width: 350px;
+  margin-top: 0;
+}
 .individualstatsheader{
   /* color: #88B0C2 !important; */
   font-family: 'Open Sans Condensed', sans-serif !important;
@@ -178,7 +184,6 @@ and auto generate a challenge */
   margin-left: 70px;
   margin-top: 15px;
   color: #4d4e4f !important;
-
 }
 
 .statisticssection{
@@ -228,11 +233,13 @@ and auto generate a challenge */
 
 }
 .statisticsbox{
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 25px !important;
+  /* margin-right: 10px; */
   height: 275px;
-  overflow: scroll;
+  width: 350px;
+  overflow: scroll !important;
   display: inline;
+  text-align: center;
 }
 
 .quickchallengesbox{
